# FFirefly

./: .gitignore  CMakeLists.txt  Makefile  README.md  fbuild.sh  log  meson.build  out  response.cfg  sample.cfg  setup.py  temp.cpp
FCode/: Manifest.toml  Project.toml
FCode/src/: FCode.jl
Progress PDFs/ASOC Questions/: questions.lyx
Progress PDFs/Code Outline/: Code Outline.lyx  Math_Notebook.lyx~
Progress PDFs/Fall 2022/: chiPlot2.lyx  chiPlot2.lyx~
Progress PDFs/Summer Work 1/: emailAuthors.lyx  emailAuthors.lyx~  summerwork1.lyx  summerwork3.lyx  summerwork3.lyx~  summerwork3.lyx~~~  summerwork4.lyx~  summerwork4.lyx~~~  summerwork5.lyx  summerwork5.lyx~
Progress PDFs/Superconducting Temperature/: Superconducting Temperature.lyx
Progress PDFs/dWaveDirection/: #dWaveDirection.lyx#  dWaveDirection.lyx  dWaveDirection.lyx~
argo-plot/: plot_dynamic.py  plot_static.py  plot_w.py
docs/: Developer.md  User.md
docs/ASOC Questions/: questions.lyx~
docs/Code Explanation/: Code Explanation.lyx~
docs/Code Outline/: Code Outline.lyx~  Math_Notebook.lyx
docs/Fall 2022/: chiPlot.lyx  chiPlot.lyx.emergency  chiPlot.lyx~
docs/High Eig/: highEig.lyx  highEig.lyx~
docs/Summer Work 1/: summerwork1.lyx~  summerwork2.lyx  summerwork2.lyx~  summerwork3.lyx~~  summerwork3.lyx~~~~  summerwork4.lyx  summerwork4.lyx~~
docs/Superconducting Temperature/: Superconducting Temperature.lyx~
documentation/: Developer.md  testfile
fcode/: __init__.py  fmodule.cpp  init.jl  jmodule.cpp  main.c  module.cpp  module.hpp  test.jl
fcode.egg-info/: PKG-INFO
fcode/algorithms/: eliashberg_ir.py  interpolate.cpp  interpolate.hpp  scf_interaction.c  sparse_ir_mesh.py  sparse_ir_scf_solver.py
fcode/config/: input_variables.py
fcode/hamiltonian/: band_structure.cpp  band_structure.hpp  fs.cpp  interaction.cpp  interaction.hpp  jmodtest.cpp  jmodtest.hpp  jmodtest.jl  potential.cpp  vertex.cpp
fcode/objects/: cmf.cpp  cmf.hpp  cmf_types.cpp  cmf_types.hpp  eigenvec.hpp  fastfield.cpp  fastfield.hpp  field.cpp  field.hpp  field.jl  field.py  field_wrapper.cpp  field_wrapper.hpp  fields.jl  mesh.jl  mesh.py  surfaces.cpp  vec.cpp  vec.hpp
fcode/qmodule/: Project.toml  cpp_export.cpp  cpp_export.hpp
fcode/response/: DOS.c  DOS.h  custom_DOS.hpp  response.c  response.f90  response.h  response_polarization.f90  sparse_ir_response.jl  sparse_ir_response.py  susceptibility.cpp  susceptibility.hpp
fcode/superconductor/: cfg.cpp  cfg.hpp  eliashberg.c  eliashberg.jl  eliashberg.py  eliashberg1.py  frequency_inclusion.cpp  frequency_inclusion.hpp  matrix_creation.cpp  save_data.cpp  solver.cpp  solver.hpp  superconductor.cpp  superconductor.hpp  utilities.cpp  utilities.hpp
fplot/: base.py  mag_v_w.py  plot_dynamic.py  plot_static.py
gap/: .potential.cpp.swo  .potential.cpp.swp  DOS.txt  analysis.cpp  analysis.h  band_structure.cpp  band_structure.h  calculate_chi.f90  calculations.cpp  calculations.h  cfg.cpp  cfg.f90  cfg.h  config.c  config.h  config_f.f90  edit.cpp  eigenvec.cpp  eigenvec.hpp  fermi_surface.cpp  fermi_surface.h  field.cpp  field.h  frequency_inclusion.cpp  frequency_inclusion.hpp  gap  integration.cpp  integration.h  interpolate.cpp  interpolate.h  linear_algebra.cpp  linear_algebra.h  main.c  main.cpp  matrix.cpp  matrix.hpp  matrix_creation.cpp  matrix_creation.h  plot.py  plot2.py  (+24 more)
gap/interaction_potential_data/: take_average
gap/python/: solve.py
hdf5_test/: test.cpp
helpful_scripts/: eliashberg.py  fbuild.sh
jlpkg/Firefly/: Manifest.toml  Project.toml
plot/: ARPES_interactive.py  ARPES_scan.py  FS.py  basic.py  colorplot.py  fly-plot.py  fly_plot.py  fplot.py  gap_function.py  plot_ARPES.py  plot_bands.py  plot_path.py  plot_surface.py  points_and_fit.py  test.py  wan_plot.py
plotting/: .plot_gap.py.swp  aspenplot.py  aspenplot_new.py  plot.py  plot_FS.py  plot_SAV.py  plot_coupling.py  plot_gap.py  plot_info.py  plot_potential.py
pypkg/: pyproject.toml
pypkg/firefly/: __init__.py  config.py  plot
pypkg/firefly/firefly.egg-info/: PKG-INFO
python/: phys_funcs.py  py_port.cpp
scripts/: Ek_from_hr.py  eliashberg.py  fbuild.sh  first.cfg  fly-build.sh  temp.cfg
src/: Firefly.jl  __init__.py  band_structure.cpp  band_structure.h  cfg.h  config.c  config.h  fmodule.cpp  main.c  potential.cpp  potential.h  setup.py  testfile  tmp
src/algorithms/: electron_number.cpp  electron_number.hpp  eliashberg.py  integration.cpp  integration.h  integration.hpp  interpolate.cpp  interpolate.h  linear_algebra.cpp  linear_algebra.h  linear_algebra.hpp  mu_to_n.py  out  scf_interaction.c  scf_interaction.py  sparse_ir_mesh.py  sparse_ir_scf_solver.py  sparse_ir_solver.py  testfield.h5
src/config/: input_variables.py
src/fcode.egg-info/: PKG-INFO
src/firefly.egg-info/: PKG-INFO
src/hamiltonian/: BSE.jl  band_structure.cpp  band_structure.h  band_structure.hpp  bethe_salpeter.cpp  bethe_salpeter.hpp  fs.hpp  hamiltonian_modules.cpp  interaction.cpp  interaction.hpp  potential.cpp  potential.h  potential.hpp  self_energy.cpp  self_energy.jl  test.jl  vertex.cpp  vertex.hpp
src/many_body/: many_body_loop.jl  many_body_triqs.py  node.cpp  node.hpp  renormalization.cpp  renormalization.hpp  self_energy.cpp  self_energy.hpp  self_energy.jl
src/module/: Project.toml  input_imports.py  read_hpps.py  temp  temp.jl  temp.py
src/objects/: eigenvec.cpp  eigenvec.hpp  field.cpp  field.hpp  matrix.cpp  matrix.hpp  mesh.jl  mesh.py  surfaces.cpp  surfaces.hpp  test.jl  vec.cpp  vec.h  vec.hpp
src/qmodule/: cpp_export.cpp  cpp_export.hpp
src/response/: DOS.c  custom_DOS.cpp  response.f90  response.h  response_polarization.f90  sparse_ir_response.jl  susceptibility.cpp  susceptibility.h  susceptibility.hpp
src/superconductor/: cfg.cpp  cfg.hpp  debug.jl  eliash_build.jl  eliashberg.c  eliashberg.h  eliashberg.jl  si.jl  (+23 more)
tests/: chi_test.cpp  eigenvalue_divergence.txt  freq_test.cpp  integral_tests.cpp  interpolate_test.cpp  matsubara_tests.cpp  matsubara_tests.h  plot.cpp  plot.h  surface_integrals.cpp  temp.py  test.cpp  testing.cpp  tests_main.py
(+185 files in other folders)
