[project]
name = "firefly"
version = "0.1.0"
description = "CMT codebase with universal integration of languages and packages"
authors = [{ name = "Griffin Heier", email = "griffinheier@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "firefly"} 
#packages = ["ffirefly"]

[tool.setuptools.packages.find]
where = ["firefly"]
